# MScThesis_tSCS

./: .gitignore  README.md  myTMSI  myTMSI.slx  myTMSI_AnnaSparapani.slx
Archivio/CodiciMatlab/: Analisi_salvataggio_tempiok.m
Archivio/DatiFederico_VB/: Paolo35.mat  Paolo40.mat  Paolo45.mat  Paolo50.mat  Paolo70.mat  Paolo75.mat  Paolo80.mat  Paolo90.mat  PaoloDoppio70.mat
Archivio/provaFederico/: CMakeLists.txt
CodiciMatlab/: Analisi_salvataggio_tempiok.m
CodiciMatlab/Esempi/: EMG_esempio.m  EMGcode.m
DatiFederico_VB/: PPaolo30.mat  Paolo55.mat  Paolo60.mat  Paolo65.mat  Paolo85.mat
DatiFederico_VB/Ale/: 10.mat  30.mat  40.mat  55.mat  60.mat  70.mat
DatiFederico_VB/Davide/: 35.mat  45.mat  50.mat  55.mat  60.mat  65.mat  Doppio52.mat
DatiFederico_VB/Fra/: 70.mat  75.mat  80.mat  85.mat  95.mat
DatiFederico_VB/Francesca/: 30.mat  40.mat  45.mat  65.mat  70.mat  Doppio56.mat
DatiFederico_VB/Mamma/: 55.mat  60.mat  75.mat
DatiFederico_VB/Martina/: 25.mat  30.mat  35.mat  45.mat  55.mat  Doppio52.mat
DatiFederico_VB/Papa/: 30.mat  35.mat  40.mat  55.mat
DatiFederico_VB/Standing/: Paolo45.mat  Paolo50.mat  Paolo55.mat
DatiFederico_VB/Teo/: 30.mat  55.mat  70.mat  75.mat
DatiFederico_VB/niki/: 35.mat  40.mat  45.mat  50.mat  60.mat  70.mat  75.mat
EMG_acquisition/: myTMSI_AnnaSparapani
EMG_code/: DatiProvaEMG.mat
EMG_dataAnalysis/: EMG_analysis_P1.m  EMG_analysis_P2.m  EMG_analysis_prova.asv  EMG_analysis_prova.m  Prova13_11.mat  plotMwave.asv  plotMwave.m
Graphs/: PAD_hamsDx.fig
Trike_dataAnalysis/: MAforcesPlot.m  lettura_files_forces_BLE.m  lettura_files_power_ble.m  lettura_single_files_power_ble.m  squarewaveSpectrum.m
_Stimulation/: stimulation.gitignore
_Stimulation/stimulation_GUI/: CMakeLists.txt  globals.cpp  globals.h  headers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol1.cpp  protocol1.h  protocol1.ui  protocol2.cpp  protocol2.h  protocol2.ui  protocol3.cpp  protocol3.h  protocol3.ui  protocol4.cpp  protocol4.h  protocol4.ui  stim_thread.cpp  stim_thread.h  stimulator.cpp  stimulator.h  triangularstim.cpp  triangularstim.h  triangularstim.ui
myTMSI_AnnaSparapani_ert_linux/: buildInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  ert_main.cpp  multiword_types.h  myTMSI_AnnaSparapani.h  myTMSI_AnnaSparapani_data.cpp  myTMSI_AnnaSparapani_dt.h  myTMSI_AnnaSparapani_private.h  myTMSI_AnnaSparapani_targ_data_map.m  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
myTMSI_ert_linux/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  multiword_types.h  myTMSI.cpp  myTMSI.h  myTMSI.mk  myTMSI_data.cpp  myTMSI_dt.h  myTMSI_private.h  myTMSI_targ_data_map.m  myTMSI_types.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
provaFederico/: main.cpp
(+578 files in other folders)
